src/gtk-3.0/gtk-dark.css
/* ... */
#xfwm-tabwin button:active, #xfwm-tabwin button:checked, #xfwm-tabwin button:active:hover, #xfwm-tabwin button:checked:hover { background-color: #fb6f55; }

#xfwm-tabwin button:hover { background-color: #fb6f55; transition-duration: 100ms; }

.gnome-panel-menu-bar, .gnome-panel-menu-bar menubar, .mate-panel-menu-bar, .mate-panel-menu-bar menubar { background-color: #444240; }

.gnome-panel-menu-bar menubar, .gnome-panel-menu-bar #PanelApplet label, .gnome-panel-menu-bar #PanelApplet image, .mate-panel-menu-bar menubar, .mate-panel-menu-bar #PanelApplet label, .mate-panel-menu-bar #PanelApplet image { color: #f2f1f0; }

.gnome-panel-menu-bar button label, .gnome-panel-menu-bar button image, .gnome-panel-menu-bar #tasklist-button label, .gnome-panel-menu-bar #tasklist-button image, .mate-panel-menu-bar button label, .mate-panel-menu-bar button image, .mate-panel-menu-bar #tasklist-button label, .mate-panel-menu-bar #tasklist-button image { color: inherit; }

.gnome-panel-menu-bar .wnck-pager, .mate-panel-menu-bar .wnck-pager { color: #797978; background-color: #2a2927; }

.gnome-panel-menu-bar .wnck-pager:hover, .mate-panel-menu-bar .wnck-pager:hover { background-color: #514f4c; }

.gnome-panel-menu-bar .wnck-pager:selected, .mate-panel-menu-bar .wnck-pager:selected { color: #fdc3b9; background-color: #fb6f55; }

.gnome-panel-menu-bar na-tray-applet, .mate-panel-menu-bar na-tray-applet { -NaTrayApplet-icon-padding: 0; -NaTrayApplet-icon-size: 16px; }

.caja-notebook { border-top: 1px solid #1d1c1b; }

.caja-side-pane .frame { border-width: 1px 0 0; }

.caja-notebook .frame { border-width: 0 0 1px; }

.nautilus-desktop.nautilus-canvas-item, .caja-desktop, .nemo-desktop.nemo-canvas-item { color: white; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8); }

.nautilus-window searchbar { border-top: 1px solid #1d1c1b; }

.nautilus-window .searchbar-container { margin-top: -1px; }

.nautilus-window .path-bar .dim-label, .nautilus-window .path-bar label.separator, .nautilus-window .path-bar .titlebar:not(headerbar) .subtitle, .titlebar:not(headerbar) .nautilus-window .path-bar .subtitle, .nautilus-window .path-bar headerbar .subtitle, headerbar .nautilus-window .path-bar .subtitle { color: transparent; }

.disk-space-display { border-style: solid; border-width: 2px; }

.disk-space-display.unknown { background-color: #0f0f0f; border-color: black; }

.disk-space-display.used { background-color: #fb6f55; border-color: #e52805; }

.disk-space-display.free { background-color: #444240; border-color: #0f0f0f; }

.table-header { padding: 4px 0 4px 0; min-height: 24px; }

window.background.chromium { background-color: #444240; }

window.background.chromium button { border-color: #1d1c1b; }

window.background.chromium menubar { color: #f2f1f0; }

.thunar .standard-view { border-width: 0; }

.thunar .sidebar .view, .thunar .sidebar iconview { background-color: #2b2a29; }

.thunar .sidebar .view:selected, .thunar .sidebar iconview:selected { background-color: #fb6f55; }

.thunar .sidebar .view:selected:backdrop, .thunar .sidebar iconview:selected:backdrop { background-color: rgba(251, 111, 85, 0.6); }

.thunar toolbar { border-bottom: 1px solid #1d1c1b; }

.nemo-window .nemo-window-pane widget.entry { border: 1px solid; border-radius: 2px; border-color: #fb6f55; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.25), 0 2px 3px rgba(0, 0, 0, 0.22), 0 0 0 1px rgba(251, 111, 85, 0.3), 0 0 0 2px rgba(251, 111, 85, 0.1); }

.gedit-search-slider button, .gedit-search-slider button:hover { box-shadow: none; border: 1px solid #1d1c1b; }

.gedit-search-slider button:last-child, .gedit-search-slider button:hover:last-child { border-left: 0; }

#MozillaGtkWidget.background > menu > menuitem { border-radius: 0; }

#MozillaGtkWidget.background > menu .separator:not(label), .csd #MozillaGtkWidget.background > menu .separator:not(label), #MozillaGtkWidget.background .menu .separator:not(label), .csd #MozillaGtkWidget.background .menu .separator:not(label), #MozillaGtkWidget.background .context-menu .separator:not(label), .csd #MozillaGtkWidget.background .context-menu .separator:not(label) { color: #373534; }

#MozillaGtkWidget.background entry, #MozillaGtkWidget.background button { border-color: #1d1c1b; }

#MozillaGtkWidget.background entry:focus, #MozillaGtkWidget.background button:focus { border-color: #fb6f55; }

normal-button { color: #f2f1f0; outline-color: rgba(242, 241, 240, 0.3); background-color: #5c5956; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3), 0 1px 1px rgba(0, 0, 0, 0.16), 0 1px rgba(8, 7, 7, 0.1); border-color: transparent; border-bottom-color: transparent; }

normal-button:hover { color: #f2f1f0; background-color: #64615e; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.35), 0 2px 3px rgba(0, 0, 0, 0.25); }

normal-button:active { color: #f2f1f0; outline-color: rgba(242, 241, 240, 0.3); background-color: #2f2e2c; box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.08), inset 0 2px rgba(0, 0, 0, 0.04); border-color: #080707; border-bottom-color: #080707; border-top-color: black; }

normal-button:disabled { color: #9b9a98; background-color: #555452; text-shadow: none; -gtk-icon-shadow: none; box-shadow: none; border-color: transparent; }

normal-button:disabled > .label { color: inherit; }

list.tweak-categories separator { background: transparent; }

.tweak-categories { background-color: #2b2a29; border-color: #161615; box-shadow: inset -2px 0 rgba(0, 0, 0, 0.02), inset -1px 0 rgba(0, 0, 0, 0.06); }

